--- a/src/scss/layouts/Regular.scss
+++ b/src/scss/layouts/Regular.scss
@@ -5,7 +5,7 @@
   flex-direction: column;
   align-items: center;
   gap: 1rem;
-  padding: 1rem;
+  padding: 1rem 2rem;
   color: var(--on-background);
   background-color: var(--background);
 
